--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx8G
 org.gradle.parallel=true
 
 # IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
@@ -13,7 +13,7 @@ loader_version=0.18.1
 loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.0.1-1.21.10
 maven_group=net.parzival.wth
 archives_base_name=wth
 
